# mod-api

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  make.sh  tests.sh
docs/: index.md
src/: api.hpp
tests/: makefile  test_create.sh  tmp
tests/src/: godmode.cpp
